--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body href="tahaugan.github.io/resume.pdf">
+<body href="tahaugan.github.io/TahaUgan_CV.pdf">
 
 </body>
 </html>
